# sieve-bridge-client

./: .gitignore  INSTALL.md  README.md  SieveBridgeClient.spec  pyproject.toml  sieve_bridge_launcher.py
.github/workflows/: build.yaml
addon/: SieveBridgeClient.mjs  SieveClient.mjs
src/sieve_bridge/: __init__.py  __main__.py  certificates.py  credentials.py  errors.py  host.py  install.py  native_io.py  socket_worker.py  trust_store.py
tests/: test_credentials.py  test_host.py  test_native_io.py  test_trust_store.py
